--- a/index.html
+++ b/index.html
@@ -135,17 +135,7 @@
 				<div class="container chikobiko">
 					<div class="row">
 						<div class="main_tinyforest">
-							<div class="col-md-5">
-								<div class="single_tinyforest wow fadeInRight" data-wow-duration="1.5s">
-									<div class="date">12/01/2016</div>
-									<h3>Project 1</h3>
-									<blockquote>
-										<p>Data analysis and visualisation using matplotlib and scikitlearn.</p>
-									</blockquote>
-									
-									<a href="" class="btn btn-white">View Project</a>
-								</div>
-							</div>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCoX6hsZFaAQMzRau_9kuA1VxpM_dEXBysrkuLoJpYOyBGeQ/viewform?embedded=true" width="860" height="860" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 						</div>
 					</div>
 				</div>
